# LC3-Studio

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  dev_spec.md  dev_status.md  lc3_studio.sln  lc3_studio.vcxproj  lc3_studio.vcxproj.filters  presentation.cbp  wlt_helper_cpp.sln  wlt_helper_cpp.vcxproj  wlt_helper_cpp.vcxproj.filters
LC3/: assembler.cpp  config.json  lc3_assembler_adapter.cpp  lc3_gui_adapter.h  lc3_simulator_adapter.cpp  runtime.cpp
examples/: fibonacci.asm  lc3_gui_demo.asm  sum_1_to_5.asm  trap_echo.asm
src/: main.cpp  main_window.cpp  main_window.h
src/app/: command_line.cpp  command_line.h  self_test.cpp  self_test.h
src/examples/: embedded_examples.h
src/gui/: main_window.cpp  main_window.h  main_window_callbacks.cpp  main_window_commands.cpp  main_window_internal.h  main_window_layout.cpp  main_window_refresh.cpp
src/gui/io/: file_utils.cpp  file_utils.h
src/gui/widgets/: asm_highlighter.h  cell_bounds.h  memory_table.cpp  memory_table.h  register_table.cpp  register_table.h
src/ui/: asm_highlighter.cpp  file_utils.cpp  memory_table.cpp  memory_table.h  register_table.cpp
tools/: embed_examples.cmake  embed_examples.ps1
